--- a/index.ipynb
+++ b/index.ipynb
@@ -532,7 +532,7 @@
     }
    ],
    "source": [
-    "num_of_repeats = len(countries) - len(uniquie_countries)\n",
+    "num_of_repeats = len(countries) - len(unique_countries)\n",
     "num_of_repeats # 3"
    ]
   },
