Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
        " 'Malta']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -507,19 +507,19 @@
     {
      "data": {
       "text/plain": [
-       "['Canada',\n",
-       " 'Finland',\n",
-       " 'South Korea',\n",
-       " 'Malta',\n",
-       " 'Mexico',\n",
-       " 'USA',\n",
-       " 'Morocco',\n",
+       "['Morocco',\n",
        " 'Italy',\n",
+       " 'Malta',\n",
+       " 'South Korea',\n",
+       " 'USA',\n",
+       " 'Mexico',\n",
+       " 'Croatia',\n",
        " 'Argentina',\n",
-       " 'Croatia']"
+       " 'Finland',\n",
+       " 'Canada']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
